--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <!-- PRIMARY SEO TAGS -->
     <title>Sadu ACC STORE | Buy Trusted Free Fire Accounts & Rare IDs</title>
-    <meta name="description" content="Sadu Elite is the gold standard for Free Fire account trading. Securely buy rare FF IDs with EVO skins, Sakuna bundles, and S19 origin, 100% verified, zero-recall guarantee ,Sri Lanka's first and fastest Free Fire top-up website. Get instant (1-second) delivery, best customer service, and secure payments via Visa, MasterCard, Bank QR Scan, and eZ Cash.">
+    <meta name="description" content="Sadu Elite is the gold standard for Free Fire account trading. Securely buy rare FF IDs with EVO skins, Sakuna bundles, and S19 origin, 100% verified, zero-recall guarantee ,Sri Lanka's first and fastest Free Fire top-up website. Get instant (1-second) delivery, best customer service, and secure payments via Visa, MasterCard, Bank QR Scan, and eZ Cash, sadu acc store.">
     <meta name="keywords" content="buy free fire account, FF ID sale, rare free fire skins, trusted FF seller, Sadu Elite, Free Fire asset exchange, Sri Lanka FF store">
     <link rel="canonical" href="https://saduaccstore.netlify.app/">
 
@@ -303,3 +303,4 @@
 </body>
 
 </html>
+
